UDPATED index and css
The button function is now work
after user entered a value, now the grid will work
the mouse hover also work properly after user
enter a value from input button

--- a/style.css
+++ b/style.css
@@ -3,15 +3,17 @@ body{
 }
 
 .container {
-    margin: 0 10px;
+    margin: 0;
     display: flex;
     flex-wrap: wrap;
+    border:solid red 2px;
     height: 960px;
     width: 960px;
 }
 
 .square {
     height: 60px;
-    width: 60px;
+    width: 60px;    
     border: solid black 2px;
+    box-sizing: border-box;
 }
